--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -161,6 +161,11 @@
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
+                        <a href="{{ url_for('project_new') }}" class="btn btn-dark w-100">
+                            <i class="fas fa-plus"></i> New Project
+                        </a>
+                    </div>
+                    <div class="col-md-3 mb-2">
                         <a href="{{ url_for('rfpo_new') }}" class="btn btn-info w-100">
                             <i class="fas fa-plus"></i> New RFPO
                         </a>
