--- a/templates/error.html
+++ b/templates/error.html
@@ -72,7 +72,8 @@
         <div class="error-message">
             {{ error }}
         </div>
-        <a href="{{ url_for('index') if url_for else '/' }}" class="btn-home">
+        <!-- Use a safe root link instead of url_for('index') to avoid BuildError in apps without an 'index' endpoint -->
+        <a href="/" class="btn-home">
             <i class="fas fa-home"></i> Return Home
         </a>
     </div>
