--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -78,6 +78,8 @@
 
 <!-- Statistics Cards -->
 <div class="row mb-4">
+    {# Hidden per request: Consortiums summary card #}
+    {#
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-primary border-4">
             <div class="card-body">
@@ -93,7 +95,10 @@
             </div>
         </div>
     </div>
+    #}
 
+    {# Hidden per request: Teams summary card #}
+    {#
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-success border-4">
             <div class="card-body">
@@ -109,6 +114,7 @@
             </div>
         </div>
     </div>
+    #}
 
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-info border-4">
@@ -126,6 +132,8 @@
         </div>
     </div>
 
+    {# Hidden per request: Users summary card #}
+    {#
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-warning border-4">
             <div class="card-body">
@@ -141,6 +149,7 @@
             </div>
         </div>
     </div>
+    #}
 </div>
 
 <!-- Approval System Statistics -->
@@ -193,6 +202,8 @@
         </div>
     </div>
 
+    {# Hidden per request: Total Files summary card #}
+    {#
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-start border-danger border-4">
             <div class="card-body">
@@ -208,6 +219,7 @@
             </div>
         </div>
     </div>
+    #}
 </div>
 
 <!-- Quick Actions -->
